--- a/translation/pt/the_besieged_farm.po
+++ b/translation/pt/the_besieged_farm.po
@@ -1,49 +1,41 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010 THE sumwars'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# FULL NAME <EMAIL@ADDRESS>, 2010.
+# Portuguese translations for sumwars package
+# Copyright (C) 2011
+# This file is distributed under the same license as the PACKAGE package
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: sumwars 0.5\n"
+"Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-09-11 23:13+0400\n"
+"PO-Revision-Date: 2011-04-07 21:09+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: ru\n"
+"Language-Team: Portuguese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: besieged_farm.xml
 msgid "The besieged farm"
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"The peasants are rescued, the goblins slain, and the service paid. What more "
-"can you ask for?"
+msgid "The peasants are rescued, the goblins slain, and the service paid. What more can you ask for?"
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"The peasants are rescued and the goblins slain. It's time to collect the "
-"reward for the trouble in Joringsbridge."
+msgid "The peasants are rescued and the goblins slain. It's time to collect the reward for the trouble in Joringsbridge."
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"The goblins around Bron's farm are not among the living anymore. I should "
-"knock at the door and make sure everything is all right. No peasants, no "
-"money."
+msgid "The goblins around Bron's farm are not among the living anymore. I should knock at the door and make sure everything is all right. No peasants, no money."
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"The farm of a peasant named Michel Bron is besieged by goblins. His family "
-"needs help - fast."
+msgid "The farm of a peasant named Michel Bron is besieged by goblins. His family needs help - fast."
 msgstr ""
 
 #: besieged_farm.xml
@@ -63,13 +55,11 @@ msgid "Don't think I haven't seen you hanging around back there."
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"Don't think I haven't seen you and your friend hanging around back there."
+msgid "Don't think I haven't seen you and your friend hanging around back there."
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"Don't think I haven't seen you and your friends hanging around back there."
+msgid "Don't think I haven't seen you and your friends hanging around back there."
 msgstr ""
 
 #: besieged_farm.xml
@@ -77,9 +67,7 @@ msgid "But I don't want to complain."
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"You know the drill: Get to the Northern Meadow and drive away the goblins "
-"around Bron's farm."
+msgid "You know the drill: Get to the Northern Meadow and drive away the goblins around Bron's farm."
 msgstr ""
 
 #: besieged_farm.xml
@@ -103,8 +91,7 @@ msgid "aisNorthMeadow"
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"That should have been enough goblins. I better look after Bron's family."
+msgid "That should have been enough goblins. I better look after Bron's family."
 msgstr ""
 
 #: besieged_farm.xml
@@ -132,9 +119,7 @@ msgid "How so?"
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"With a crytal of Avearea, of course. It's been handed down in my family for "
-"generations."
+msgid "With a crytal of Avearea, of course. It's been handed down in my family for generations."
 msgstr ""
 
 #: besieged_farm.xml
@@ -142,9 +127,7 @@ msgid "Of course. Silly of me."
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"Really now, \"..name..\". Did you think she'd use carrier pigeons in this "
-"day and age?"
+msgid "Really now, \"..name..\". Did you think she'd use carrier pigeons in this day and age?"
 msgstr ""
 
 #: besieged_farm.xml
@@ -164,9 +147,7 @@ msgid "I've already heard of it."
 msgstr ""
 
 #: besieged_farm.xml
-msgid ""
-"Michel is in the tavern getting plastered - all in honor of your bravery, of "
-"course."
+msgid "Michel is in the tavern getting plastered - all in honor of your bravery, of course."
 msgstr ""
 
 #: besieged_farm.xml
@@ -176,3 +157,4 @@ msgstr ""
 #: besieged_farm.xml
 msgid "Here's the money."
 msgstr ""
+
